@@ -6,6 +6,7 @@ lilv (0.21.3) unstable;
   * Add lilv_state_emit_port_values() for special port value handling
   * Add lilv_state_get_uri()
   * Add lilv_state_delete() for deleting user saved presets
+  * Fix lilv_world_ask() to work with wildcards
   * Fix creation of duplicate manifest entries when saving state
   * Load discovered owl ontologies as specifications
   * Expose lilv_world_load_specifications() and
@@ -17,7 +18,7 @@ lilv (0.21.3) unstable;
   * Windows fixes (thanks John Emmas)
   * Minor documentation improvements
 
- -- David Robillard <d@drobilla.net>  Mon, 16 Mar 2015 00:06:31 -0400
+ -- David Robillard <d@drobilla.net>  Mon, 16 Mar 2015 03:24:05 -0400
 
 lilv (0.20.0) stable;
 
